--- a/styles/home.css
+++ b/styles/home.css
@@ -27,7 +27,7 @@
 
 .home-buttons {
     display: grid;
-    grid-template-columns: 1fr [works-s] 276px [works-e] .3fr [contact-s] 276px [contact-e] 1fr;
+    grid-template-columns: 1fr [first-s] 276px [first-e] .3fr [second-s] 276px [second-e] 1fr;
 }
 
 .home-btn {
@@ -60,10 +60,10 @@
     color: #333;
 }
 
-#viewworks-btn {
-    grid-column: works-s/works-e;
+.home-btn:nth-of-type(1) {
+    grid-column: first-s/first-e;
 }
 
-#getintouch-btn {
-    grid-column: contact-s/contact-e;
+.home-btn:nth-of-type(2) {
+    grid-column: second-s/second-e;
 }
