--- a/styles/home.css
+++ b/styles/home.css
@@ -3,15 +3,16 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: top;
+    background-position: center;
     height: 100vh;
 }
 
 .home-wrapper {
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .home-shader {
@@ -25,15 +26,68 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
 }
 
+.home-intro-text {
+    font-family: 'Special Elite', cursive;
+    color: white;
+    position: absolute;
+}
+
+.home-intro-text h1,h2 {
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto;
+    /* animation: typing 3.5s steps(30, end), blink-caret .5s step-end infinite; */
+}
+
+.home-intro-text h1 {
+    font-size: 3.4em;
+
+}
+
+.home-intro-text h2 {
+    font-size: 2.6em;
+    color: #ddd;
+}
+
+.home-intro-text:nth-of-type(1) {
+    left: 569px;
+    top: 140px;
+}
+
+.home-intro-text:nth-of-type(2) {
+    left: 584px;
+    top: 213px;
+}
+
+.home-intro-text:nth-of-type(2):after {
+    width: 20px;
+    height: 10px;
+    border-bottom: 4px solid white;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: white }
+}
+
 .home-buttons {
     display: grid;
-    grid-template-columns: 1fr [first-s] 276px [first-e] .3fr [second-s] 276px [second-e] 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-row-gap: 20px;
+    margin-right: 12%;
+    margin-bottom: 8%;
 }
 
 .home-btn {
     border: 3px solid #ccc;
-    border-radius: 5px;
-    width: 250px;
+    border-radius: 10px;
+    width: 360px;
+    padding-right: 90px;
     height: 30px;
     font-size: 1.4em;
     padding: 10px;
@@ -53,6 +107,10 @@
 
     transition: 0.4s all ease-in;
 
+}
+
+.home-btn a {
+    margin-right: 300px;
 }
 
 .home-btn:hover {
