--- a/styles/media.css
+++ b/styles/media.css
@@ -12,7 +12,6 @@
 /* Slim down home buttons */
 
     .home-buttons {
-        grid-template-columns: 1fr [first-s] 206px [first-e] .3fr [second-s] 206px [second-e] 1fr;
 
     }
 
@@ -38,6 +37,11 @@
         margin-left: 0px;
     }
 
+    .page-content {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
     .page-footer {
         background-color: #333;
         color: #ccc;
@@ -45,7 +49,23 @@
 
     #menu-toggle {
         display: initial;
+        top: 15px;
+        right: 10px;
     }
+
+    #scroll-to-top {
+        right: 10px;
+        bottom: 15px;
+    }
+
+    /* #scroll-to-top {
+        opacity: 40%;
+    }
+
+    #scroll-to-top:hover {
+        opacity: 100%;
+    } */
+
 
 }
 
