--- a/styles/home.css
+++ b/styles/home.css
@@ -41,7 +41,6 @@
 
 .home-intro-text h1 {
     font-size: 3.4em;
-
 }
 
 .home-intro-text h2 {
@@ -50,12 +49,12 @@
 }
 
 .home-intro-text:nth-of-type(1) {
-    left: 569px;
+    left: calc(500px + 5%);
     top: 140px;
 }
 
 .home-intro-text:nth-of-type(2) {
-    left: 584px;
+    left: calc(500px + 7%);
     top: 213px;
 }
 
