--- a/styles/media.css
+++ b/styles/media.css
@@ -9,15 +9,33 @@
         margin-left: 350px;
     }
 
+    .home-intro-text:nth-of-type(1) {
+        left: calc(350px + 5%);
+    }
+    
+    .home-intro-text:nth-of-type(2) {
+        left: calc(350px + 7%);
+        top: 200px;
+    }
+
+    .home-intro-text h1 {
+        font-size: 2.8em;
+    
+    }
+    
+    .home-intro-text h2 {
+        font-size: 2.1em;
+    }
+
 /* Slim down home buttons */
 
     .home-buttons {
 
     }
-
+/* 
     .home-btn {
         width: 180px;
-    }
+    } */
 
 }
 
@@ -35,6 +53,14 @@
 
     .page-content-wrapper {
         margin-left: 0px;
+    }
+
+    .home-intro-text:nth-of-type(1) {
+        left: 5%;
+    }
+    
+    .home-intro-text:nth-of-type(2) {
+        left: 7%;
     }
 
     .page-content {
@@ -58,17 +84,48 @@
         bottom: 15px;
     }
 
-    /* #scroll-to-top {
-        opacity: 40%;
-    }
-
-    #scroll-to-top:hover {
-        opacity: 100%;
-    } */
-
-
 }
 
+
+@media only screen and (max-width: 640px) {
+
+    .home-intro-text h1 {
+        font-size: 7.5vw;
+    
+    }
+    
+    .home-intro-text h2 {
+        font-size: 5vw;
+    }
+
+
+    .home-intro-text:nth-of-type(1) {
+        left: 4%;
+        top: 140px;
+    }
+    
+    .home-intro-text:nth-of-type(2) {
+        left: 9%;
+        top: calc(140px + 10vw);
+    }
+
+    .home-wrapper {
+        justify-content: center;
+    }
+
+    .home-buttons {
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+    }
+
+    .home-btn {
+        width: 80vw;
+        height: 15px;
+        font-size: 1.2em;
+    }
+
+}
 
 
 @media only screen and (max-height: 700px) {
