button resize test for mobile

--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -70,7 +70,7 @@ box-shadow: 1px 0px 19px 0px rgba(0,0,0,0.66);
 
 .profile-contact-icons > .contact-link i {
     font-size: 2.5em;
-    color: aqua;
+    color: white;
     transition: .3s all ease-in-out;
 }
 
