--- a/styles/media.css
+++ b/styles/media.css
@@ -125,6 +125,31 @@
         font-size: 1.2em;
     }
 
+    .nav-btn {
+        font-size: 1.5em;
+        width: 40px;
+        height: 40px;
+        border: 3px solid #c31432;
+    }
+
+    #menu-toggle > .line {
+        margin-left: 3px;
+    }
+
+    #menu-toggle.close > .top {
+        margin-left: 2px;
+        transform: rotate(45deg) translateX(-20px);
+        top: 80%;
+    }
+    
+    #menu-toggle.close > .middle, #menu-toggle.close > .bottom {
+        margin-left: 2px;
+        transform: rotate(-45deg) translateX(-20px);
+        top: 10%;
+    }
+
+
+
 }
 
 
