--- a/styles/home.css
+++ b/styles/home.css
@@ -28,7 +28,6 @@
 }
 
 .home-intro-text {
-    font-family: 'Special Elite', cursive;
     color: white;
     position: absolute;
 }
@@ -37,16 +36,30 @@
     overflow: hidden;
     white-space: nowrap;
     margin: 0 auto;
-    /* animation: typing 3.5s steps(30, end), blink-caret .5s step-end infinite; */
 }
 
 .home-intro-text h1 {
     font-size: 3.4em;
+    font-family: 'Special Elite', cursive;
+    border-right: 4px solid transparent;
+    animation: typing 3.5s steps(30, end),
+                blink-caret .5s steps(44) 7 normal;
 }
 
 .home-intro-text h2 {
     font-size: 2.6em;
     color: #ddd;
+    font-family: 'Special Elite', cursive;
+    border-right: 3px solid transparent;
+    animation: typing 3.5s 3.5s steps(30, end),
+                blink-caret .5s 3.6s steps(44) infinite normal;
+    border-radius: 1px;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    width: 0%;
 }
 
 .home-intro-text:nth-of-type(1) {
@@ -72,7 +85,7 @@
 
 @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: white }
+    50% { border-color: #ddd }
 }
 
 .home-buttons {
