--- a/styles/media.css
+++ b/styles/media.css
@@ -27,16 +27,6 @@
         font-size: 2.1em;
     }
 
-/* Slim down home buttons */
-
-    .home-buttons {
-
-    }
-/* 
-    .home-btn {
-        width: 180px;
-    } */
-
 }
 
 @media only screen and (max-width: 1050px) {
@@ -49,6 +39,11 @@
 
     .side-bar.open {
         left: 0px;
+    }
+
+    
+    .profile-contact-icons {
+        margin-left: 10px;
     }
 
     .page-content-wrapper {
@@ -90,7 +85,7 @@
 @media only screen and (max-width: 640px) {
 
     .home-intro-text h1 {
-        font-size: 7.5vw;
+        font-size: 7vw;
     
     }
     
@@ -100,7 +95,7 @@
 
 
     .home-intro-text:nth-of-type(1) {
-        left: 4%;
+        left: 2%;
         top: 140px;
     }
     
@@ -116,6 +111,7 @@
     .home-buttons {
         margin-left: 0;
         margin-right: 0;
+        margin-bottom: 12%;
         width: 100%;
     }
 
@@ -147,8 +143,6 @@
         transform: rotate(-45deg) translateX(-20px);
         top: 10%;
     }
-
-
 
 }
 
