--- a/styles/home.css
+++ b/styles/home.css
@@ -43,7 +43,7 @@
     font-family: 'Special Elite', cursive;
     border-right: 4px solid transparent;
     animation: typing 3.5s steps(30, end),
-                blink-caret .5s steps(44) 7 normal;
+                blink-caret .5s .1s steps(44) 7 normal;
 }
 
 .home-intro-text h2 {
@@ -62,6 +62,16 @@
     width: 0%;
 }
 
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: #ddd }
+}
+
 .home-intro-text:nth-of-type(1) {
     left: calc(500px + 5%);
     top: 140px;
@@ -78,15 +88,6 @@
     border-bottom: 4px solid white;
 }
 
-@keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-}
-
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: #ddd }
-}
 
 .home-buttons {
     display: grid;
