--- a/styles/media.css
+++ b/styles/media.css
@@ -31,6 +31,8 @@
 
 @media only screen and (max-width: 1050px) {
 
+/* Sidebar toggle kicks in */
+
     .side-bar {
         width: 300px;
         left: -300px;
@@ -84,9 +86,10 @@
 
 @media only screen and (max-width: 640px) {
 
+/* Mobile styles --- smaller buttons, slimmer elements */
+
     .home-intro-text h1 {
         font-size: 7vw;
-    
     }
     
     .home-intro-text h2 {
@@ -149,6 +152,8 @@
 
 @media only screen and (max-height: 700px) {
 
+/* In case of landscape ipad and smaller viewport heights */
+
     .side-bar {
         grid-template-rows: [s] 1fr [profile-s] 150px [profile-e] 10px [title-s] 80px [title-e links-s] 200px [links-e contacts-s] 70px [contacts-e] 1fr [e];
         
@@ -161,5 +166,27 @@
 
     .profile-links {
         grid-row-gap: 10px;
+    }
+
+
+}
+
+@media only screen and (max-height: 500px) {
+
+    .home-intro-text:nth-of-type(1) {
+        top: 45px;
+    }
+    
+    .home-intro-text:nth-of-type(2) {
+        top: calc(40px + 10vw);
+    }
+
+    .home-buttons {
+        margin-bottom: 2%;
+    }
+
+    .home-btn {
+        height: 12px;
+        font-size: 1em;
     }
 }
