started styling portfolio cards

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,5 @@
 #home {    
-    background-image: url("../static/images/landing.jpg");
+    background-image: url("../static/images/background/landing.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
