--- a/styles/body.css
+++ b/styles/body.css
@@ -12,8 +12,10 @@ body {
 }
 
 .page-content {
-    margin-left: 30px;
-    margin-right: 130px;
+    padding-left: 30px;
+    padding-right: 130px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .page-footer {
@@ -32,7 +34,12 @@ body {
     user-select: none;
 }
 
-h1 {
+h3 {
     font-family: 'Oswald', sans-serif;
+    font-size: 2.5em;
+    text-transform: uppercase;
+}
 
+.off-white {
+    background-color: #e3e3e3;
 }
