--- a/styles/media.css
+++ b/styles/media.css
@@ -61,8 +61,8 @@
     }
 
     .page-content {
-        margin-left: 20px;
-        margin-right: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     .page-footer {
@@ -145,6 +145,29 @@
         margin-left: 2px;
         transform: rotate(-45deg) translateX(-20px);
         top: 10%;
+    }
+
+    .page-content {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .projects-container {
+        grid-template-columns: 1fr;
+    }
+
+    .project-actions {
+        justify-content: space-around;
+    }
+
+    .project-skills-wrapper {
+        grid-template-columns: repeat(auto-fill, 80px);
+        grid-gap: 5px;
+    }
+    
+    .project-skill {
+        height: 18px;
+        width: 80px;
     }
 
 }
