--- a/styles/media.css
+++ b/styles/media.css
@@ -148,11 +148,11 @@
     }
 
     .page-content {
-        padding-left: 5px;
-        padding-right: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
-    .projects-container {
+    #projects-container {
         grid-template-columns: 1fr;
     }
 
@@ -163,6 +163,7 @@
     .project-skills-wrapper {
         grid-template-columns: repeat(auto-fill, 80px);
         grid-gap: 5px;
+        font-size: 14px;
     }
     
     .project-skill {
