--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,11 +1,12 @@
 #projects-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-    grid-gap: 30px;
+    grid-gap: 50px;
+    margin-bottom: 80px;
 }
 
 .project-wrapper {
-    border-radius: 10px;
+    border-radius: 5px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -14,10 +15,10 @@
     height: 300px;
 
     display: grid;
-    grid-template-rows: 15px [action-s] 40px [action-e] 1fr [title-s] 40px [title-e divider-s] 3px [divider-e desc-s] 30px [desc-e] 5px [skills-s] 30px [skills-e] 10px [e];
-    -webkit-box-shadow: 4px 4px 13px 1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 4px 4px 13px 1px rgba(0,0,0,0.75);
-    box-shadow: 4px 4px 13px 1px rgba(0,0,0,0.75);
+    grid-template-rows: [action-s] 55px [action-e] 1fr [title-s] 40px [title-e divider-s] 3px [divider-e desc-s] 30px [desc-e] 10px [skills-s] 30px [skills-e] 10px [e];
+    -webkit-box-shadow: 3px 3px 11px 0px rgba(0,0,0,0.37);
+-moz-box-shadow: 3px 3px 11px 0px rgba(0,0,0,0.37);
+box-shadow: 3px 3px 11px 0px rgba(0,0,0,0.37);
 }
 
 .project-actions {
@@ -27,10 +28,13 @@
     justify-content: flex-end;
     padding-right: 50px;
     z-index: 1;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .project-bg {
-    background-color: rgba(0,0,0,.4);
+    /* background-color: rgba(0,0,0,.8) */
+    background-color: #111;
 }
 
 .project-action {
@@ -59,13 +63,15 @@
 
 .project-title, .project-desc, .project-skills-wrapper {
     padding-left: 30px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .project-title {
     grid-row: title-s/title-e;
     font-size: 2em;
     font-weight: 600;
+    color: #FFFFFF;
+    text-shadow: 3px 5px 2px #171717;
 }
 
 .project-divider {
@@ -73,6 +79,8 @@
     height: 3px;
     width: 100%;
     background-color: #ccc;
+    transform: translateY(-4px);
+    z-index: 1;
 }
 
 .project-shader {
@@ -82,8 +90,8 @@
     grid-row: 1/-1;
     position: absolute;
     background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 65%, rgba(0,0,0,0.1561799719887955) 80%, rgba(0,0,0,0.4959558823529411) 100%);
-    /* z-index: ; */
+    background: linear-gradient(190deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0.7061799719887955) 80%, rgba(0,0,0,0.5059558823529411) 100%);
+
 }
 
 .project-desc {
