--- a/styles/media.css
+++ b/styles/media.css
@@ -158,17 +158,37 @@
 
     .project-actions {
         justify-content: space-around;
+        font-size: 80%;
+        padding-right: 0;
+    }
+
+    .project-action {
+        margin-left: 0;
     }
 
     .project-skills-wrapper {
-        grid-template-columns: repeat(auto-fill, 80px);
-        grid-gap: 5px;
-        font-size: 14px;
+        grid-template-columns: repeat(auto-fill, 65px);
+        grid-gap: 3px;
+        font-size: 13px;
     }
     
     .project-skill {
         height: 18px;
-        width: 80px;
+        width: 65px;
+    }
+
+    .project-title {
+        font-size: 1.5em;
+        transform: translateY(5px);
+    }
+
+    .project-title, .project-desc, .project-skills-wrapper {
+        padding-left: 10px;
+    }
+
+    .project-desc {
+        padding-right: 10px;
+        font-size: 70%;
     }
 
 }
