--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,9 @@
 #home {    
     background-image: url("../static/images/background/landing.jpg");
     background-size: cover;
+    -o-background-size:cover; 
+    -moz-background-size:cover; 
+    -webkit-background-size:cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
