--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -15,7 +15,7 @@
     width: 420px;
     height: 100vh;
     display: grid;
-    grid-template-rows: [s] 2fr [profile-s] 200px [profile-e] .5fr [title-s] 160px [title-e] .5fr [links-s] 220px [links-e] .5fr [contacts-s] 100px [contacts-e] 1fr [e];
+    grid-template-rows: [s] 2fr [profile-s] 200px [profile-e] .5fr [title-s] 160px [title-e] .5fr [links-s] 200px [links-e] 1fr [contacts-s] 80px [contacts-e] 2fr [e];
     justify-content: center;
     align-items: center;
     justify-items: center;
@@ -78,7 +78,7 @@
     display: grid;
     grid-template-rows: 1fr;
     grid-row-gap: 10px;
-    padding-left: 20%;
+    /* padding-left: 20%; */
 }
 
 .profile-links > .profile-link {
@@ -88,14 +88,15 @@
     font-size: 1.5em;
     position: relative;
     overflow: hidden;
-    width: 240px;
     padding-top: 10px;
+    width: 300px;
     display: grid;
     grid-template-columns: 40px 1fr;
     -webkit-box-shadow: 7px 7px 5px -6px rgba(0,0,0,0.56);
     -moz-box-shadow: 7px 7px 5px -6px rgba(0,0,0,0.56);
     box-shadow: 7px 7px 5px -6px rgba(0,0,0,0.56);
     height: 30px;
+    transition: 0.3s all ease-in;
 
 }
 
@@ -120,6 +121,10 @@
     width: 100%;
 }
 
+.profile-links > .profile-link:focus {
+    color: #240b36;
+}
+
 .profile-contact {
     grid-row: contacts-s/contacts-e;
 }
@@ -130,7 +135,6 @@
     grid-gap: 40px;
     align-items: center;
     justify-items: center;
-    /* margin-left: 30px; */
 }
 
 .profile-contact-icons > .contact-link {
@@ -140,25 +144,34 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    position: relative;
 }
 
 .profile-contact-icons > .contact-link i {
     font-size: 2.5em;
     color: white;
     transition: .3s all ease-in-out;
-    position: relative;
-    /* overflow: hidden; */
 }
 
-.profile-contact-icons > .contact-link i:after {
+.contact-link:after {
     position: absolute;
-    background: rgba(0,0,0,0.6);
+    background: #240b36;
+    opacity: .9;
     content: '';
-    height: 70px;
-    width: 70px;
+    width: 150%;
+    height: 150%;
     border-radius: 50%;
-    top: -38%;
-    left: -38%;
     z-index: -1;
+    -webkit-box-shadow: 7px 7px 5px -6px rgba(0,0,0,0.56);
+    -moz-box-shadow: 7px 7px 5px -6px rgba(0,0,0,0.56);
+    box-shadow: 7px 7px 5px -6px rgba(0,0,0,0.56);
+    transition: .3s all ease-in-out;
 }
 
+.contact-link:hover i {
+    color: #c31432;
+}
+
+.contact-link:hover:after {
+    background: white;
+}
