--- a/styles/lightbox.css
+++ b/styles/lightbox.css
@@ -2,6 +2,12 @@
 
 .blur-content {
     filter: blur(5px);
+    animation: blur-background .5s;
+}
+
+@keyframes blur-background {
+    from { filter: blur(0px)}
+    to { filter: blur(5px) }
 }
 
 .hide-content {
