--- a/styles/body.css
+++ b/styles/body.css
@@ -22,10 +22,12 @@ body {
 }
 
 .page-footer {
-    height: 40px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;;
+    background-color: #333;
+    color: #ccc;
 }
 
 .no-select {
