--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -15,7 +15,7 @@
     width: 420px;
     height: 100vh;
     display: grid;
-    grid-template-rows: [s] 2fr [profile-s] 200px [profile-e] .5fr [title-s] 160px [title-e] .5fr [links-s] 200px [links-e] 1fr [contacts-s] 80px [contacts-e] 2fr [e];
+    grid-template-rows: [s] 2fr [profile-s] 200px [profile-e] .5fr [title-s] 160px [title-e] .5fr [links-s] 150px [links-e] 1fr [contacts-s] 130px [contacts-e] 2fr [e];
     justify-content: center;
     align-items: center;
     justify-items: center;
@@ -27,7 +27,7 @@
     text-transform: uppercase;
     width: 300px;
     justify-content: left;
-    padding-left: 30px;
+    /* padding-left: 30px; */
     letter-spacing: normal;
     
 }
@@ -80,7 +80,7 @@
     grid-row-gap: 7px;
 }
 
-.profile-links > .profile-link {
+.profile-link {
     text-decoration: none;
     /* font-family: 'Special Elite', cursive; */
     font-family: 'Share Tech Mono', monospace;
@@ -128,7 +128,10 @@
 
 .profile-contact {
     grid-row: contacts-s/contacts-e;
-    margin-left: 5px;
+}
+
+.profile-contact > .profile-link {
+    margin-bottom: 30px;
 }
 
 .profile-contact-icons {
@@ -137,6 +140,8 @@
     grid-gap: 40px;
     align-items: center;
     justify-items: center;
+    padding-left: 15px;
+    padding-right: 5px;
 }
 
 .profile-contact-icons > .contact-link {
