--- a/styles/media.css
+++ b/styles/media.css
@@ -117,7 +117,7 @@
     }
 
     .home-intro-text h1 {
-        font-size: 7.3vw;
+        font-size: 7.1vw;
     }
     
     .home-intro-text h2 {
@@ -126,12 +126,12 @@
 
 
     .home-intro-text:nth-of-type(1) {
-        left: 2%;
+        left: 3vw;
         top: 140px;
     }
     
     .home-intro-text:nth-of-type(2) {
-        left: 9%;
+        left: 9vw;
         top: calc(140px + 10vw);
     }
 
