--- a/styles/media.css
+++ b/styles/media.css
@@ -219,6 +219,13 @@
         font-size: 70%;
     }
 
+
+    .page-footer {
+        font-size: 80%;
+        justify-content: left;
+        padding-left: 10px;
+    }
+
 }
 
 
@@ -258,9 +265,6 @@
         height: 110%;
     }
 
-    .page-footer {
-        font-size: 80%;
-    }
 
 
 }
