--- a/styles/body.css
+++ b/styles/body.css
@@ -60,8 +60,9 @@ body {
     user-select: none;
 }
 
-h3 {
+.page-content h3 {
     font-family: 'Oswald', sans-serif;
-    font-size: 2.5em;
+    font-size: 3em;
     text-transform: uppercase;
 }
+
