--- a/styles/media.css
+++ b/styles/media.css
@@ -180,6 +180,11 @@
         padding-right: 5px;
     }
 
+    .page-content h3 {
+        font-size: 2.5em;
+        margin-left: 5px;
+    }
+
     #projects-container {
         grid-template-columns: 1fr;
     }
