--- a/styles/resume.css
+++ b/styles/resume.css
@@ -7,7 +7,7 @@
 
 
 .resume-card {
-    width: 350px;
+    width: 450px;
     margin: 15px;
     /* border: 5px solid #240b36; */
     border-radius: 10px;
@@ -77,12 +77,15 @@
 .resume-title {
     grid-row: s-title/e-title;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.8em;
     font-weight: 700;
+    font-family: 'Oswald', sans-serif;
 }
 
 .resume-btn-wrapper {
     grid-row: s-buttons/e-buttons;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .resume-btn-wrapper a {
@@ -126,4 +129,42 @@
 .resume-btn:hover {
     color: white;
     z-index: 0;
+}
+
+
+@media only screen and (max-width: 640px) {
+/* Mobile styles */
+    .resume-wrapper {
+        flex-direction: column;
+    }
+
+    .resume-card {
+        width: unset;
+        grid-template-rows: [s s-header] 120px [e-header s-icon] 57px [e-icon s-title] 40px [e-title s-buttons] 1fr [e-buttons] 5px [e];
+        /* margin-right: 30px; */
+    }
+
+    .resume-icon {
+        transform: translateX(-20%);
+    }
+
+    .resume-icon i {
+        height: 72px;
+        width: 72px;
+        font-size: 4.5em;
+    }
+
+    .resume-title {
+        text-align: left;
+        margin-left: 15px;
+    }
+
+    .resume-btn-wrapper {
+        margin-right: 25px;
+    }
+
+    .resume-btn {
+        font-size: .8em;
+    }
+
 }
