--- a/styles/media.css
+++ b/styles/media.css
@@ -224,11 +224,11 @@
         font-size: 70%;
     }
 
-
     .page-footer {
-        font-size: 80%;
-        justify-content: left;
-        padding-left: 10px;
+        font-size: 75%;
+        align-items: flex-start;
+        padding-left: 15px;
+        padding-right: 50px;
     }
 
 }
