--- a/styles/skills.css
+++ b/styles/skills.css
@@ -1,19 +1,44 @@
 
+.skills-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 250px);
+    grid-gap: 20px;
+}
+
 .skill-card {
-    background: blue;
-    height: 300px;
+    background: #250b36;
+    height: 202px;
     width: 250px;
+    border-radius: 10px;
 }
 
 .skill-card > .skill-icon {
-    width: 200px;
+    /* width: 200px; */
     font-size: 10em;
     background: #fff;
     display: flex;
     justify-content: center;
-    transform: translateX(12.5%) translateY(-12.5%);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border: 1px solid #250b36;
+    /* transform: translateX(12.5%) translateY(-12.5%); */
+}
+
+.skill-text {
+    height: 40px;
+    color: white;
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #skills > i {
     font-size: 10em;
+}
+
+#skills {
+    margin-bottom: 40px;
 }
