--- a/styles/media.css
+++ b/styles/media.css
@@ -90,9 +90,6 @@
         padding-right: 30px;
     }
 
-    .page-footer {
-    }
-
     #menu-toggle {
         display: initial;
         top: 15px;
@@ -222,6 +219,13 @@
     .project-desc {
         padding-right: 10px;
         font-size: 70%;
+    }
+
+    .project-client-icon {
+        right: 10px;
+        top: 60px;
+        height: 50px;
+        width: 50px;
     }
 
     .page-footer {
