added under construction alert to lightbox popup

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -50,7 +50,7 @@
 }
 
 .project-inprogress {
-    color: #dea731;
+    color: #fad201;
 }
 
 .project-active {
@@ -81,7 +81,7 @@
 }
 
 .project-inprogress i {
-    color: #dea731;
+    color: #fad201;
 }
 
 .project-title, .project-desc, .project-skills-wrapper {
