--- a/styles/lightbox.css
+++ b/styles/lightbox.css
@@ -80,6 +80,15 @@
     margin-right: 10px;
 }
 
+.lightbox-inprogress {
+    color: #fad201;
+}
+
+.lightbox-inprogress i {
+    font-size: 1.1em;
+    margin-right: 5px;
+}
+
 #lightbox-skills-wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fill, 100px);
