--- a/styles/media.css
+++ b/styles/media.css
@@ -186,6 +186,16 @@
         grid-template-columns: 1fr;
     }
 
+    .project-wrapper {
+        height: 180px;
+        /* padding-right: 15x; */
+        grid-template-rows: [action-s] 40px [action-e] 1fr [title-s] 40px [title-e divider-s] 3px [divider-e desc-s] 30px [desc-e e];
+    }
+
+    .project-bg {
+        background-color: rgba(0,0,0,0.9);
+    }
+
     .project-actions {
         justify-content: space-around;
         font-size: 80%;
@@ -197,19 +207,22 @@
     }
 
     .project-skills-wrapper {
-        grid-template-columns: repeat(auto-fill, 65px);
+        display: none;
+        /* grid-template-columns: repeat(auto-fill, 65px);
         grid-gap: 3px;
-        font-size: 13px;
+        font-size: 13px; */
     }
-    
+/*     
     .project-skill {
         height: 18px;
         width: 65px;
-    }
+    } */
 
     .project-title {
         font-size: 1.5em;
         transform: translateY(5px);
+        text-shadow: 2px 3px 2px #171717;
+}
     }
 
     .project-title, .project-desc, .project-skills-wrapper {
@@ -219,6 +232,8 @@
     .project-desc {
         padding-right: 10px;
         font-size: 70%;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
     }
 
     .project-client-icon {
