--- a/styles/body.css
+++ b/styles/body.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
     overflow-y: overlay;
 
